# chzzk-discord-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  serverless.yml
.github/workflows/: frontend-deploy.yml  lambda.yml  layer.yml  main.yml
backend/: Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
backend/src/: app.module.ts  app.service.ts  lambda.ts  main.ts  schema.graphql
backend/src/chzzk/: chzzk.module.ts  chzzk.service.ts
backend/src/chzzk-api/: chzzk-api.module.ts  chzzk-api.service.ts
backend/src/discord/: discord.module.ts  discord.resolver.ts  discord.service.ts
backend/test/: app.e2e-spec.ts
docs/: about.md  chzzk_id.md  getting_started.md  mention.md
frontend/: .env  .env.development  .eslintrc.cjs  .prettierrc  components.json  index.html  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/.devcontainer/: Dockerfile  devcontainer.json
frontend/app/: globals.css  google-adsense.tsx  layout.tsx  not-found.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/providers/: index.tsx  react-query-provider.tsx
frontend/components/docs/: docs-ui.tsx
frontend/components/input/: index.tsx
frontend/components/layouts/: status-icon.tsx  status-page-layout.tsx
frontend/components/policy/: index.ts  policy-callout.tsx  (+4 more)
frontend/constants/: cookies.ts  env.ts  links.ts  nav.ts  route-map.ts  time.ts
frontend/hooks/: use-auth.ts  use-guild-options.ts  use-notifications.ts  use-scroll-spy.ts  use-scroll-threshold.ts
frontend/lib/: api-client.ts  cookie.ts  date.ts  env.ts  urls.ts
frontend/public/: ads.txt  sitemap.xml
frontend/queries/: auth.ts  discord.ts  notifications.ts
frontend/src/: App.tsx  index.css  main.tsx  markdown.css
frontend/types/: api.ts
lambdas/delete_notification/: __init__.py  main.py
lambdas/discord_guild_by_id/: __init__.py
lambdas/discord_guilds/: __init__.py  main.py
lambdas/discord_me/: __init__.py  main.py
lambdas/discord_oauth2_redirect/: __init__.py  main.py
lambdas/evant_handler/: main.py
lambdas/event_handler/: __init__.py  main.py
lambdas/get_guild_channels/: __init__.py  main.py
lambdas/get_notification_by_guild_id/: __init__.py  main.py
lambdas/live_check/: __init__.py  main.py
lambdas/naver_session_renew/: __init__.py
lambdas/post_notification/: __init__.py  main.py
lambdas/send_test_notification/: __init__.py  main.py
lambdas/update_notification/: __init__.py  main.py
landing/: package-lock.json  package.json  pnpm-lock.yaml
scripts/: format.sh
shared/: __init__.py  chzzk.py  dynamodb.py  exceptions.py  middleware.py  models.py  utils.py
shared/discord/: __init__.py  dataclass.py  utils.py
terraform/: .gitignore  .terraform.lock.hcl  main.tf  provider.tf  variable.tf
(+211 files in other folders)
