[project]
name = "chzzk-discord-bot"
version = "2.0.0"
description = ""
authors = [
    { name = "junah201", email = "junah.dev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests==2.28.1",
    "user-agent>=0.1.14",
]

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true